--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://github.com/Balanss/Squarelion.git",
+  "homepage": "https://Balanss.github.io/Squarelion",
   "name": "squarelion",
   "private": true,
   "version": "0.0.0",
@@ -43,6 +43,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "gh-pages": "^5.0.0",
     "vite": "^4.3.9"
   }
 }
