--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -33,12 +34,14 @@
     "emojione": "^4.5.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.22.1",
+    "framer-motion": "^10.12.18",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
     "pdfmake": "^0.2.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.1.2",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.2",
     "twemoji": "^14.0.2"
   },
