--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.7.1",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
@@ -21,29 +20,23 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.5",
-    "@netbek/noto-emoji": "^0.0.7",
-    "@react-pdf/font": "^2.3.6",
-    "@react-pdf/renderer": "^3.1.12",
     "axios": "^1.4.0",
-    "docxtemplater": "^3.37.11",
+    "babel-polyfill": "^6.26.0",
     "dompurify": "^3.0.3",
     "dotenv": "^16.3.1",
+    "draft-js": "^0.11.7",
     "emoji-js": "^3.7.0",
     "emoji-mart": "^5.5.2",
     "emoji-picker-react": "^4.4.9",
-    "emojione": "^4.5.0",
     "file-saver": "^2.0.5",
     "firebase": "^9.22.1",
     "framer-motion": "^10.12.18",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.1",
-    "pdfmake": "^0.2.7",
+    "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.1.2",
     "react-quill": "^2.0.0",
-    "react-router-dom": "^6.11.2",
-    "twemoji": "^14.0.2"
+    "react-router-dom": "^6.11.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
