--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/icons-material": "^5.13.7",
-    "@mui/material": "^5.13.7",
+    "@mui/icons-material": "^5.14.0",
+    "@mui/material": "^5.14.0",
     "axios": "^1.4.0",
     "babel-polyfill": "^6.26.0",
-    "dompurify": "^3.0.4",
+    "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
     "draft-js": "^0.11.7",
     "emoji-js": "^3.7.0",
@@ -42,11 +42,14 @@
     "@types/react": "^18.0.37",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^4.0.0",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.38.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "gh-pages": "^5.0.0",
+    "postcss": "^8.4.25",
+    "tailwindcss": "^3.3.2",
     "vite": "^4.3.9"
   }
 }
