--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "express": "^4.18.2",
     "file-saver": "^2.0.5",
     "firebase": "^9.23.0",
-    "framer-motion": "^10.12.20",
+    "framer-motion": "^10.12.22",
     "quill": "^1.3.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-pdf": "^7.1.2",
+    "react-pdf": "^7.1.3",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.1",
-    "vite-express": "*"
+    "vite-express": "^0.9.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.26",
