--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.14.0",
     "axios": "^1.4.0",
     "babel-polyfill": "^6.26.0",
+    "date-fns": "^2.30.0",
     "dompurify": "^3.0.5",
     "dotenv": "^16.3.1",
     "draft-js": "^0.11.7",
@@ -34,6 +35,8 @@
     "framer-motion": "^10.12.22",
     "quill": "^1.3.7",
     "react": "^18.2.0",
+    "react-calendar": "^4.4.0",
+    "react-datepicker": "^4.16.0",
     "react-dom": "^18.2.0",
     "react-pdf": "^7.1.3",
     "react-quill": "^2.0.0",
