Switching to live

--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{
+{   "homepage": "https://Balanss.github.io/Squarelion",
   "name": "vite-react-starter",
   "private": true,
   "version": "0.0.0",
