--- a/package.json
+++ b/package.json
@@ -1,59 +1,1 @@
-
-
-{   "homepage": "https://Balanss.github.io/Squarelion",
-  "name": "vite-react-starter",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "nodemon src/server/main.js -w src/server",
-    "start": "NODE_ENV=production node src/server/main.js",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "build": "vite build",
-    "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@builder.io/react": "^3.0.7",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/icons-material": "^5.14.0",
-    "@mui/material": "^5.14.0",
-    "axios": "^1.4.0",
-    "babel-polyfill": "^6.26.0",
-    "date-fns": "^2.30.0",
-    "dompurify": "^3.0.5",
-    "dotenv": "^16.3.1",
-    "draft-js": "^0.11.7",
-    "emoji-js": "^3.7.0",
-    "emoji-mart": "^5.5.2",
-    "emoji-picker-react": "^4.4.9",
-    "express": "^4.18.2",
-    "file-saver": "^2.0.5",
-    "firebase": "^9.23.0",
-    "framer-motion": "^10.12.22",
-    "quill": "^1.3.7",
-    "react": "^18.2.0",
-    "react-calendar": "^4.4.0",
-    "react-datepicker": "^4.16.0",
-    "react-dom": "^18.2.0",
-    "react-pdf": "^7.1.3",
-    "react-quill": "^2.0.0",
-    "react-router-dom": "^6.14.1",
-    "tw-daterange": "^1.1.25",
-    "vite-express": "^0.9.1"
-  },
-  "devDependencies": {
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.10",
-    "@vitejs/plugin-react": "^3.0.1",
-    "autoprefixer": "^10.4.14",
-    "nodemon": "^2.0.20",
-    "postcss": "^8.4.25",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.0.4"
-  }
-}
+{"homepage":"https://Balanss.github.io/Squarelion","name":"vite-react-starter","private":true,"version":"0.0.0","scripts":{"dev":"nodemon src/server/main.js -w src/server","start":"NODE_ENV=production node src/server/main.js","predeploy":"npm run build","deploy":"gh-pages -d dist","build":"vite build","lint":"eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0","preview":"vite preview"},"dependencies":{"@builder.io/react":"^3.0.7","@emotion/react":"^11.11.1","@emotion/styled":"^11.11.0","@fortawesome/fontawesome-svg-core":"^6.4.0","@fortawesome/free-solid-svg-icons":"^6.4.0","@fortawesome/react-fontawesome":"^0.2.0","@mui/icons-material":"^5.14.0","@mui/material":"^5.14.0","axios":"^1.4.0","babel-polyfill":"^6.26.0","date-fns":"^2.30.0","dompurify":"^3.0.5","dotenv":"^16.3.1","draft-js":"^0.11.7","emoji-js":"^3.7.0","emoji-mart":"^5.5.2","emoji-picker-react":"^4.4.9","express":"^4.18.2","file-saver":"^2.0.5","firebase":"^9.23.0","framer-motion":"^10.12.22","quill":"^1.3.7","react":"^18.2.0","react-calendar":"^4.4.0","react-datepicker":"^4.16.0","react-dom":"^18.2.0","react-pdf":"^7.1.3","react-quill":"^2.0.0","react-router-dom":"^6.14.1","tw-daterange":"^1.1.25","vite-express":"^0.9.1"},"devDependencies":{"@types/react":"^18.0.26","@types/react-dom":"^18.0.10","@vitejs/plugin-react":"^3.0.1","autoprefixer":"^10.4.14","nodemon":"^2.0.20","postcss":"^8.4.25","tailwindcss":"^3.3.3","vite":"^4.0.4"}}
