--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
         "nodemon": "^3.0.1",
         "postcss": "^8.4.25",
         "tailwindcss": "^3.3.3",
+        "tailwindcss-animated": "^1.0.1",
         "vite": "^4.0.4"
     }
 }
