--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
         "flowbite": "^1.8.1",
         "flowbite-datepicker": "^1.2.2",
         "flowbite-react": "^0.6.4",
-        "framer-motion": "^10.12.22",
+        "framer-motion": "^10.16.16",
         "gh-pages": "^5.0.0",
         "install": "^0.13.0",
         "quill": "^1.3.7",
@@ -49,10 +49,12 @@
         "react-chartjs-2": "^4.3.1",
         "react-datepicker": "^4.16.0",
         "react-dom": "^18.2.0",
+        "react-intersection-observer": "^9.5.3",
         "react-paginate": "^8.2.0",
         "react-pdf": "^7.1.3",
         "react-quill": "^2.0.0",
         "react-router-dom": "^6.14.1",
+        "react-tilt": "^1.0.2",
         "recharts": "^2.9.0",
         "tailwind-datepicker-react": "^1.4.3",
         "tw-daterange": "^1.1.25",
