--- a/package.json
+++ b/package.json
@@ -50,11 +50,13 @@
         "react-datepicker": "^4.16.0",
         "react-dom": "^18.2.0",
         "react-intersection-observer": "^9.5.3",
+        "react-modal": "^3.16.1",
         "react-paginate": "^8.2.0",
         "react-pdf": "^7.1.3",
         "react-quill": "^2.0.0",
         "react-router-dom": "^6.14.1",
         "react-tilt": "^1.0.2",
+        "react-toastify": "^10.0.4",
         "recharts": "^2.9.0",
         "tailwind-datepicker-react": "^1.4.3",
         "tw-daterange": "^1.1.25",
