--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@fortawesome/react-fontawesome": "^0.2.0",
         "@mui/icons-material": "^5.14.0",
         "@mui/material": "^5.14.0",
+        "@react-pdf/renderer": "^3.4.2",
         "apexcharts": "^3.44.0",
         "axios": "^1.4.0",
         "babel-polyfill": "^6.26.0",
@@ -49,6 +50,7 @@
         "react-chartjs-2": "^4.3.1",
         "react-datepicker": "^4.16.0",
         "react-dom": "^18.2.0",
+        "react-hot-toast": "^2.4.1",
         "react-intersection-observer": "^9.5.3",
         "react-modal": "^3.16.1",
         "react-paginate": "^8.2.0",
